Ticket: #No-ticket SubTicket: # Component: Changes: 1.Fix the bug on safari.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
@@ -1225,6 +1225,7 @@
 
 			.selector-menu {
 				.selector;
+				display: flex;
 				float: left;
 				height: 24px;
 				line-height: 24px;
